* Fixed issue with upload applet having a client side out of memory error when uploading large files